--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,45 @@
-<h2>Welcome To Test Check</h2>
-<p>
-  The time is now: <%= Time.now %>
-</p>
+<!--
+You are free to copy and use this sample in accordance with the terms of the
+Apache license (http://www.apache.org/licenses/LICENSE-2.0.html)
+-->
+
+<form action="#" onsubmit="showAddress(this.address.value); return false">
+    <p>
+        <input type="text" size="60" name="address" value="The Red fort,Delhi,IN"/>
+        <input type="submit" value="Go!"/>
+    </p>
+    <div id="map_canvas" style="width: 500px; height: 300px"></div>
+</form>
+​
+<script type="text/javascript">
+
+    var map = null;
+    var geocoder = null;
+
+    function initialize() {
+        if (GBrowserIsCompatible()) {
+            map = new GMap2(document.getElementById("map_canvas"));
+            map.setCenter(new GLatLng(28.655812600000000000, 77.241952200000010000), 13);
+            geocoder = new GClientGeocoder();
+        }
+    }
+
+    function showAddress(address) {
+        if (geocoder) {
+            geocoder.getLatLng(
+                    address,
+                    function (point) {
+                        if (!point) {
+                            alert(address + " not found");
+                        } else {
+                            map.setCenter(point, 13);
+                            var marker = new GMarker(point);
+                            map.addOverlay(marker);
+                            marker.openInfoWindowHtml(address);
+                        }
+                    }
+            );
+        }
+    }
+
+</script>
