--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,10 @@
     <script src="//maps.google.com/maps?file=api&amp;v=2&amp;sensor=true&amp;key=AIzaSyD9r1peompoZwg8PCZYZnL7B3V58X466fI" type="text/javascript"></script>
 </head>
 <body onload="initialize()" onunload="GUnload()" style="font-family: Arial;border: 0 none;">
-
+<h1>This Is Just For Testing Perpuse</h1>
 <%= yield %>
+<h2>A H KHAN</h2>
 
+<h3><a href="http://dreamchat.herokuapp.com"> Visit Other App</a></h3>
 </body>
 </html>
