--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 </head>
 
 <body onload="initialize()" onunload="GUnload()" style="font-family: Arial;border: 0 none;">
-<h1>This Is Just For Testing Perpuse</h1>
+<h1>This Is Just For Testing Purpose</h1>
 
 <%= form_tag({:remote => true}, {:onSubmit => 'gotToAddress(this.address.value);return false'}) do %>
     <p>
