--- a/app/views/welcome/_index.html.erb
+++ b/app/views/welcome/_index.html.erb
@@ -10,7 +10,7 @@
             <th style="width:12%">Name</th>
             <th style="width:8%">Icon</th>
             <th style="width:10%">Now Open</th>
-            <th style="width:20%">Types</th>
+            <th style="width:20%">Type</th>
             <th style="width:40%">Address</th>
         </tr>
         <% counter=1
@@ -24,7 +24,7 @@
                      opening_hours=result['opening_hours'] %>
                     <td height="30px"><%= opening_hours['open_now']="true" ? "Open" : "Close" %></td>
                 <% else %>
-                    <td height="30px"><%= "Close" %></td>
+                    <td height="30px"><%= "N/A" %></td>
                 <% end %>
                 <td height="30px"><%= result['types'] %></td>
                 <td height="30px"><%= result['formatted_address'] %></td>
